updated rsvpd photo

--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
           <h4>Learn More</h4>
         </button>
       </div>
-      <img src="pics/rsvpd-proj.png" class="project-pic-large" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
+      <img style="align-self: flex-start;" src="pics/rsvpd-proj.png" class="project-pic-large" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
     </div>
 
     <!-- Featured project -->
