fixed broken link to resume

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
             So far, during my time at Deloitte, I've supported and led half a dozen projects, ranging from 4-week usability evaluations to 9-month digital transformations. I also founded and led a grassroots community for junior designers and contributed to several initiatives focused on the new-hire experience.
           </p>
 
-          <button class="secondary-btn" onclick="location.href='resume.html';" value="Download Resume"; target="_blank">View Resume</button>
+          <button class="secondary-btn" onclick="location.href='resume.pdf';" value="Download Resume"; target="_blank">View Resume</button>
         </div>
 
         <div class="context-specifics">
