updated about page content

--- a/about.html
+++ b/about.html
@@ -56,18 +56,21 @@
         <div class="context-summary">
           <h2>What I Do</h2>
           <p class="p-XL">
-            I live in Washington DC and work at Deloitte Digital, primarily with federal government clients.
+            I do a little bit of everything, but I am most drawn towards the synthesis & organizational elements of UX. I like making sense of things. I like spreadsheets. My fridge is color-coded (jk, but you get the picture).
           </p>
 
-          <div class="short-divider"></div>
-          <p> 
-            I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. My work has supported those seeking food secruity, affordable housing, emergency management, and more. 
-          </p>
-          <p>
-            So far, during my time at Deloitte, I've supported and led half a dozen projects, ranging from 4-week usability evaluations to 9-month digital transformations. I also founded and led a grassroots community for junior designers and contributed to several initiatives focused on the new-hire experience.
-          </p>
+          <div  class="space"></div>
 
-          <button class="secondary-btn" onclick="location.href='resume.pdf';" value="Download Resume"; target="_blank">View Resume</button>
+          <p>In practice, this applies to a couple different areas. First, I love translating raw data into actionable insights and solutions, and I can do that best when I'm most involved in the early research stages and initial design + strategy stages of a project. I also enjoy the other end of the spectrum - working with design systems and organizing component libraries. I've found that my type-A tendencies tend to complement my more right-brained colleagues in these areas.</p>
+
+          <div  class="space"></div>
+
+<!--           <p>During my time at Deloitte, I've supported and led 20+ projects, ranging from 4-week usability evaluations to 9-month digital transformations. I also founded and led a grassroots community for junior designers and contributed to several initiatives focused on the new-hire experience.</p>
+
+          <div  class="space"></div> -->
+
+          <p>For more info on my professional background, download my <a href="resume.pdf" target="_blank">resume</a>.</p>
+
         </div>
 
         <div class="context-specifics">
@@ -81,18 +84,63 @@
         </div>
       </div>
 
-  <div class="full-width-mid-page" style="margin-bottom: 0">
+<!--   <div class="full-width-mid-page" style="margin-bottom: 0">
     <div class="panel dark" style="background-color: var(--mediumgray);">
       <h2 style="padding-top: 5%;">Education + Experience</h2>
       <img style="padding-top: 5%" class="pic-left" src="pics/timeline.png">
+    </div> 
+  </div> -->
+  
+  <div class="full-width-mid-page" style="margin-bottom: 0">
+    <div class="panel dark" style="background-color: var(--purple)">
+      <div class="mid-panel-text" style="padding: 10%;">
+        <h4>What I'm All About</h4>
+        <h2 style="color: black">I have really high standards for myself — I'm not physically capable of half-assing something when I care about it.</h2>
+      </div>
     </div>
+  </div>        
+
+  <div class="panel" id="Process">
+    <div  class="space"></div>
+    <h2 class="body right">My Principles</h2>
+      <div class="body right">
+        
+        <div  class="space"></div>
+
+        <div class="small-highlight"><h3>Think beyond pixels</h3>
+          <p>I'm not <em>just</em> a pixel-pusher, professional rectangle-drawer, or a <a target="_blank" href="https://designtitles.com/">Sophisticated Executive of Shapes</a>. I care about nailing down the "why" before the "how," and I'm not afraid to stand up for what I believe in.</p>
+        </div>
+
+        <div  class="space"></div>
+
+        <div class="small-highlight"><h3>Stay humble & keep learning</h3>
+          <p>My formal education at Carnegie Mellon was in Information Systems and Human-Computer Interaction, but I didn't stop learning when I graduated. Reading books like <a target="_blank" href="https://www.ruinedby.design/">Ruined by Design</a>, <a target="_blank" href="http://www.nointerface.com/book/">The Best Interface is No Interface</a>, and <a target="_blank" href="https://us.sagepub.com/en-us/nam/qualitative-research-evaluation-methods/book232962">Qualitative Research and Evaluation</a> (just to name a few) have helped me fill in the gaps and transition my career from case study to reality. They've influenced me to question my assumptions, ask 'why' more, and practice my craft with rigor.</p>
+        </div>
+
+        <div  class="space"></div>
+
+        <div class="small-highlight"><h3>Own your career</h3>
+          <p>I don't wait around for the things I want — I got after them proactively. For example, when I noticed a major gap in Deloitte's new-hire experience, I took initiative to create a mentorship program for aspiring designers.</p>
+        </div>
+
+        <div  class="space"></div>
+
+        <div class="small-highlight"><h3>Teamwork makes the dream work</h3>
+          <p>Design is a team sport, and part of working smart, not hard, is being able to effectively delegate. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
+        </div>
+
+
+ <!--        <div class="so-what">
+          <h4>What we didn't do</h4>
+          <p>The team was able to do some family & friends recruiting for usability testing as we built out the 2.0 designs, but we didn't talk to a wide range of target users due to limited capacity and ability to reach that group.</p>
+        </div>  -->
+
+      </div>
   </div>
 
 
 <!--         <div id="about" class="body right">
 
-            <h3>Skills + Strengths</h3>
-            <p>I do a little bit of everything, but I am most drawn towards the synthesis & organizational elements of UX. I like making sense of things. I like spreadsheets. My fridge is color-coded (jk, but you get the picture). In practice, this applies to a couple different areas. First, I love translating raw data into actionable insights and solutions, and I can do that best when I'm most involved in the early research stages and initial design + strategy stages of a project. I also enjoy the other end of the spectrum - working with design systems and organizing component libraries. I've found that my type-A tendencies tend to complement my more right-brained colleagues in these areas.</p>
 
             <div class="space"></div>
             
