updated ifms case study

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray);">
-        <div class="title-wrapper animate-reveal animate-first">
+      <div class="full-width" style="background-color: var(--mediumgray); height: 60vh">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 60vh">
           <div class="title">
             <div>
               <h1 style="color: white">About</h1>
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <img src="pics/about/emily4.png" class="big-pic">
+        <img src="pics/about/emily4.png" class="big-pic" style="height: 60vh">
 
       </div>
 
