--- a/fha.html
+++ b/fha.html
@@ -51,6 +51,7 @@
 				<div>
 					<h4>2020 • Deloitte Digital • Housing</h4>
 					<h1 style="color: black">FHA.gov Website Redesign</h1>
+					<p class="p-XL">I co-led the redesign and launch of an consumer-facing site that serves over 8 million single family homeowners.</p>
 				</div>
 			</div>
 		</div>
@@ -97,10 +98,11 @@
 
 	<div class="full-width-mid-page" style="margin-bottom: 0">
 		<div class="panel dark" style="background-color: var(--pink)">
-			<div class="mid-panel-text" style="padding: 10%;">
+			<div class="mid-panel-text">
 				<h4>How might we</h4>
 				<h2 style="color: black">Demystify the first-time homebuyer experience for those who want to put as little as 3.5% down on the purchase of a single family home</h2>
 			</div>
+			<img class="background-panel-pic" src="pics/pink-circles.png">
 		</div>
 	</div>
 
