--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -41,6 +41,7 @@
 				<div>
 					<h4>2021 • Deloitte Digital • Health</h4>
 					<h1 style="color: black">Health Nonprofit Discovery</h1>
+					<p class="p-XL">I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
 				</div>
 			</div>
 		</div> 
@@ -71,9 +72,10 @@
 			<p>
 				We delivered a comprehensive report that included all our stakeholder and user research findings, synthesis artifacts (Modes & Mindsets and Journey Maps) and outputs from collaborative Product Visioning + Roadmapping sessions.
 			</p>
+			<div class="space"></div>
             <div class="so-what">
         		<p class="p-XL">"I feel like our website is akin to us being dropped in the Amazon rainforest and you are providing us the GPS to get out"</p>
-        		<p>-Client, re: Heuristic Evaluation & Stakeholder Research</p>
+        		<p>-Client, re: Heuristic Evaluation & Stakeholder Research Report</p>
         	</div> 
 
 		</div>
@@ -100,11 +102,11 @@
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--purple);">
-			<div style="z-index: 2; padding: 10%; position: absolute; width: -webkit-fill-available; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+			<div class="mid-panel-text">
 				<h4>Research Objective</h4>
 				<h2 style="color: black">Understand why people navigate to the site, what information they are interested in finding, and why they eventually leave.</h2>				
 			</div>
-			<img style="width: 100vw; padding: 0; z-index: 1" class="pic-left" src="pics/Nonprofit/hmw.png">
+			<img class="background-panel-pic" src="pics/Nonprofit/hmw.png">
 		</div>
 	</div>
 
