--- a/hud.html
+++ b/hud.html
@@ -41,6 +41,7 @@
 				<div>
 					<h4>2021 • Deloitte Digital • Housing</h4>
 					<h1 style="color: black">Federal Design System</h1>
+					<p class="p-XL">I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p>
 				</div>
 			</div>
 		</div>
@@ -105,11 +106,11 @@
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--green)">
-			<div class="mid-panel-text">
+			<div class="mid-panel-text-top">
 				<h4>My Objective</h4>
 				<h2 style="color: black">Clean up the design files and build a comprehensive symbol library so we could hand the files off to developers.</h2>
 			</div>
-			<img style="padding-top: 5%" class="pic-left" src="pics/HUD/where-we-started.png">
+			<img class="pic-left" src="pics/HUD/where-we-started.png">
 		</div>
 	</div>
 
