--- a/l&d.html
+++ b/l&d.html
@@ -41,6 +41,7 @@
 	                <div>
 	                	<h4>Summer 2018 • Deloitte Digital</h4>
 	                	<h1 style="color: black">Learning & Development Portal</h1>
+	                	<p class="p-XL">During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</p>
 	            	</div>
 	            </div>
 		  	</div>
@@ -95,7 +96,7 @@
 
 		<div class="full-width-mid-page">
 			<div class="panel dark" style="background-color: var(--purple)">
-				<div class="mid-panel-text">
+				<div class="mid-panel-text-top">
 					<h4>How might we</h4>
 					<h2 style="color: black">Empower practitioners to take advantage of continuing education resources</h2>
 				</div>
