--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,8 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray);">
-        <div class="title-wrapper animate-reveal animate-first">
+      <div class="full-width" style="background-color: var(--mediumgray); height: 60vh">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 60vh">
           <div class="title">
             <div>
               <h1 style="color: white">Projects</h1>
@@ -67,18 +67,7 @@
     <img class="project-pic-large" src="pics/EF.png" alt="A screenshot of the HUD style guide">
   </div>
 
-  <div class="section-large" style="background-color: var(--green);">
-    <div class="project-info-large">
-      <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Housing</h4>
-      <h2>Federal Design System</h2>
-      <p class="p-XL">I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p>
-      <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
-        <h4></i> Learn More</h4>
-      </button>
-    </div>
-    <img class="project-pic-large" src="pics/HUD_ds.png" alt="A screenshot of the HUD style guide">
-  </div>
-
+<!-- Featured project -->
   <div class="section-large" style="background-color: var(--pink);">
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2020 • Deloitte Digital • Housing</h4>
@@ -92,7 +81,20 @@
   </div>
 
     <!-- Featured project -->
-<!--     <div class="section-large" style="background-color: var(--orange)">
+  <div class="section-large" style="background-color: var(--green);">
+    <div class="project-info-large">
+      <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Housing</h4>
+      <h2>Federal Design System</h2>
+      <p class="p-XL">I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p>
+      <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
+        <h4></i> Learn More</h4>
+      </button>
+    </div>
+    <img class="project-pic-large" src="pics/HUD_ds.png" alt="A screenshot of the HUD style guide">
+  </div>
+
+    <!-- Featured project -->
+    <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
         <h4 style="margin-bottom: 10px;">2019 • Deloitte Digital • Food & Nutrition</h4>
         <h2>Food Management System</h2>
@@ -102,21 +104,8 @@
         </button>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
-    </div> -->
-
-    <!-- Featured project -->
-
-    <div class="section-large" style="background-color: var(--orange);">
-      <div class="project-info">
-        <h4 style="margin-bottom: 10px;">Fall 2018 • Carnegie Mellon University</h4>
-        <h2 >RSVP'd — the attendance app</h2>
-        <p class="p-XL">For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</p>
-        <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
-          <h4>Learn More</h4>
-        </button>
-      </div>
-      <img style="align-self: flex-start;" src="pics/rsvpd-proj.png" class="project-pic-large" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
     </div>
+
 
     <!-- Featured project -->
     <div class="section-large" style="background-color: var(--purple);">
@@ -129,6 +118,19 @@
         </button>
       </div>
       <img src="pics/l&d-proj.png" class="project-pic-large" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
+    </div>
+
+    <!-- Featured project -->
+    <div class="section-large" style="background-color: var(--orange);">
+      <div class="project-info">
+        <h4 style="margin-bottom: 10px;">Fall 2018 • Carnegie Mellon University</h4>
+        <h2 >RSVP'd — the attendance app</h2>
+        <p class="p-XL">For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</p>
+        <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
+          <h4>Learn More</h4>
+        </button>
+      </div>
+      <img style="align-self: flex-start;" src="pics/rsvpd-proj.png" class="project-pic-large" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
     </div>
 
 
