--- a/rsvpd.html
+++ b/rsvpd.html
@@ -41,6 +41,7 @@
             	<div>
             		<h4>Fall 2018 • Senior Capstone</h4>
 		  			<h1 style="color: black">RSVP'd — the attendance app</h1>
+		  			<p class="p-XL">For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</p>
 		  		</div>
             </div>
 	  	</div>      
@@ -50,7 +51,7 @@
 
 	  	<div class="panel context">
 			<div class="context-summary">
-			<h2>Context</h2>
+			<h2>Project Overview</h2>
 
 				<p class="p-XL">This project focused on the problem of attendance at group events. It's a universal issue: people say they'll attend an event, and most of the time, at least a portion of the attendees don't show up. The bigger the event, the bigger the problem. When friends flake, event organizers lose resources, time, and money.  </p>
 				
@@ -95,11 +96,11 @@
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--orange);">
-			<div style="z-index: 2; padding: 10%; position: absolute; width: -webkit-fill-available; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+			<div class="mid-panel-text">
 				<h4>How might we</h4>
 				<h2 style="color: black">Encourage people to attend events they commit to</h2>				
 			</div>
-			<img style="width: 100vw; padding: 0; z-index: 1" class="pic-left" src="pics/rsvpd/circles-background.png">
+			<img class="background-panel-pic" src="pics/rsvpd/circles-background.png">
 		</div>
 	</div>
 		  	
