fixed about mid panel

--- a/about.html
+++ b/about.html
@@ -92,11 +92,12 @@
   </div> -->
   
   <div class="full-width-mid-page" style="margin-bottom: 0">
-    <div class="panel dark" style="background-color: var(--purple)">
-      <div class="mid-panel-text" style="padding: 10%;">
+    <div class="panel dark" style="background-color: var(--green)">
+      <div class="mid-panel-text">
         <h4>What I'm All About</h4>
         <h2 style="color: black">I have really high standards for myself — I'm not physically capable of half-assing something when I care about it.</h2>
       </div>
+      <img class="background-panel-pic" src="pics/green-circles.png">
     </div>
   </div>        
 
