updated home pink section image

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ $('#footer').load('http://emilyporat.com/footer.html');
         </div>
       </div>
     </div>
-    <img src="pics/complexity.png" class="big-pic" style="height: 95vh">
+    <img src="pics/about-section-img.png" class="big-pic" style="height: 95vh">
   </div>
 
-  <div class="full-width" style="background-color: var(--orange); margin-top: 0px; margin-bottom: 0px">
+  <div class="full-width" style="background-color: var(--orange); margin-top: 0px; margin-bottom: 0px; height: 70vh">
     <div class="title-wrapper animate-reveal animate-first" style="height: 70vh">
-      <div class="title">
+      <div style="width: 50%" class="title">
         <div>
           <h4>Get in touch</h4>
           <h2>Want to chat? Connect with me on <a style="color:white" href="https://www.linkedin.com/in/emilyporat/" target="_blank">LinkedIn</a> or shoot me an email.</h2>
@@ -100,7 +100,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         </div>
       </div>
     </div>
-    <img src="pics/home-background-orange.png" class="big-pic" style="height: 95vh">
+    <img src="pics/home-background-orange.png" class="big-pic" style="height: 70vh">
   </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
