updated nonprofit caese content

--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -156,7 +156,68 @@
 			</div>
 	</div>
 
-	<div class="panel" id="What We Learned">
+	<div class="panel" id="interviews">
+		<h2 class="body right">Interview Strategy</h2>
+			<div class="body right">
+				<p class="p-XL">The client was remarkably open to connecting us with interview subjects. After discussions around their goals, they provided a list of nearly 50 individuals:</p>
+				<ul>
+					<li>18 internal stakeholders</li>
+					<li>8 external stakeholders (partner orgs)</li>
+					<li>16 end users (people with the condition, their caregivers, and other family/friends)</li>
+				</ul>
+
+				<div class="space"></div>
+
+				<h3>Participant Criteria</h3>
+				<p>The client noted their priority users as women (primarily mothers) age 18-40 with moderate to advanced technology literacy, so the sample skewed towards that group. We still wanted to hear from a variety of users on the spectrum of:</p>
+				<ul>
+					<li>Race/ethnicity</li>
+					<li>Severity of condition</li>
+					<li>Level of involvement with the organization</li>
+				</ul>
+
+				<p>We sent out a pre-interview demographic survey to all participants so we could keep that criteria in check, and ultimately did some additional “family and friends”-style recruiting from our own personal networks to fill in the gaps.</p>
+
+				<div class="space"></div>
+
+				<h3>Goals + Structure</h3>
+				<p>We split our user interviews into two sections to make the most of the hour we had with each person: open-ended questions and a usability test of the current site. I created an interview guide with the goal of understanding each user's experience with the condition, learning needs, mindsets, and behaviors. It was split up like this:</p>
+				<ul>
+					<li>Intro & warm up</li>
+					<li>Journey with condition</li>
+					<li>Current involvement with the organization</li>
+					<li>Learning experience — initial questions</li>
+					<li>Most helpful resources</li>
+					<li>Most helpful <em>digital</em> resources</li>
+					<li>General impression of the website</li>
+					<li>Usability test of key tasks</li>
+				</ul>
+
+				<div class="space"></div>
+
+				<h3>Interview Data</h3>
+				<p>After each interview, I moved verbatim notes into a spreadsheet so that each unique thought occupied one cell. Each cell also included the unique participant and note ID so we could reference back to the interview if needed. Once all the interviews concluded, I copied all our notes over to Mural and generated color-coded sticky notes based on role.</p>
+
+				<img src="pics/Nonprofit/sort-start.png" class="pic-right">
+
+			</div>
+	</div>
+
+	<div class="panel" id="interviews">
+		<h2 class="body right">Synthesis</h2>
+			<div class="body right">
+				<p class="p-XL">For both stakeholder and user interviews, I led affinity diagramming sessions in which the entire team sorted verbatim quotes from interviews.</p>
+				<img src="pics/Nonprofit/sorting.gif" class="pic-right">
+
+				<p>After several rounds of sorting, I was able to pull out three overarching themes and 11 categories. I also pulled out key characteristics and behaviors of users, which fed into the final synthesis artifacts.</p>
+				<img src="pics/Nonprofit/sort-end.png" class="pic-right">
+
+
+
+			</div>
+	</div>
+
+<!-- 	<div class="panel" id="What We Learned">
 		<h2 class="body right">What We Learned</h2>
 			<div class="body right">
 				<p class="p-XL">These were are overarching takeaways from all our research activities:</p>
@@ -169,10 +230,10 @@
 
 				<div class="space"></div>
 			</div>
-	</div>
+	</div> -->
 
 
-	<div class="full-width-mid-page" style="margin-bottom: 0">
+<!-- 	<div class="full-width-mid-page" style="margin-bottom: 0">
 		<div class="panel dark" style="text-align: left;">
 			<div class="mid-panel-text">
 				<h3>1. Usability issues stem from organizational issues</h3>
@@ -226,10 +287,10 @@
 			</div>
 			<img class="pic-left" src="pics/Nonprofit/diversity.png">
 		</div>
-	</div>
+	</div> -->
 
 	<div class="panel" id="Component Audit">
-		<h2 class="body right">Our Recommendations</h2>
+		<h2 class="body right">Research Artifacts</h2>
 			<div class="body right">
 				<p class="p-XL">To enable the client to employ nuanced personalization strategies, I created nuanced models - Modes, Mindsets, and Journeys - that provide insight on the characteristics, behaviors, priorities <i>beyond</i> demographics.</p>
 
@@ -261,7 +322,7 @@
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="text-align: left;">
-			<div class="mid-panel-text">
+			<div class="mid-panel-text-top">
 				<h3>Motivated Caregiver Journey</h3>
 				<ul>
 					<li>The “Motivated Caregiver” mindset is responsible for the care and safety of a child with this disorder. This user is highly motivated to find information online but is not connected with the larger community.</li> 
