updated home title width

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
       <div class="full-width" style="background-color: var(--green); margin-bottom: 0; height: 95vh">
         <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
-          <div class="title" style="color: var(--white);">
+          <div class="title" style="color: var(--white); width: 53%">
             <div>
               <h4 style="color: black">UX Designer • Washington DC</h4>
               <h1 style="margin-bottom: 10px">Emily Porat</h1>
