--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -41,7 +41,7 @@
 				<div>
 					<h4>2021 • Deloitte Digital • Health</h4>
 					<h1 style="color: black">Health Nonprofit Discovery</h1>
-					<p class="p-XL">I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
+					<p class="p-XL">I evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
 				</div>
 			</div>
 		</div> 
