--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
       <h2>Health Nonprofit Discovery</h2>
-      <p class="p-XL">I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
+      <p class="p-XL">I evaluated the overarching user experience of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
       <button id="myBtn" onclick="location.href='health-nonprofit.html';" value="Go to health nonprofit Discovery project page">
         <h4>Learn More</h4>
       </button>
