updated context portion of all pages

--- a/fha.html
+++ b/fha.html
@@ -59,40 +59,52 @@
 		<img src="pics/FHA_featured.png" class="big-pic">
 	</div>
 
-	<div class="panel context">
-		<div class="context-summary">
-			<h2>Project Overview</h2>
-			<p class="p-XL">
-				The Federal Housing Administration serves homeowners, homebuyers, renters, and lenders. All their content was housed within HUD.gov, which had a dated look & feel and content all over the place: mainly, their Housing section combined business content and consumer content in ways that made it very difficult for consumers to find answers and take action. 
-			</p>
+	<div class="panel">
+		<div class="body right">
+			<div class="context-summary">
+				<h2>Project Overview</h2>
+				<p class="p-XL">
+					The Federal Housing Administration serves homeowners, homebuyers, renters, and lenders. All their content was housed within HUD.gov, which had a dated look & feel and content all over the place: mainly, their Housing section combined business content and consumer content in ways that made it very difficult for consumers to find answers and take action. 
+				</p>
 
-			<div class="space"></div>
+				<div class="space"></div>
 
-			<h3>Approach</h3>
-			<p>	
-				My team began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-depth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
-			</p>
+				<h3>Approach</h3>
+				<p>	
+					My team began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-depth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
+				</p>
 
-			<div class="space"></div>
+				<div class="space"></div>
 
-			<h3>Outcome</h3>
-			<p>
-				The 1.0 version of FHA.gov launched in June 2020. The design team handed off 25 2.0 high-fidelity templates for future development.
-			</p>
+				<h3>Outcome</h3>
+				<p>
+					The 1.0 version of FHA.gov launched in June 2020. The design team handed off 25 2.0 high-fidelity templates for future development.
+				</p>
 
-		</div>
+			</div>
 
-		<div class="context-specifics">
+			<div class="context-specifics">
 
-			<h4>Team</h4><div class="context-description"><p>Me, Another UX Designer, 1 Creative Director, 1 PM, 3 Engineers, 1 QA, 1 Engagement Manager</p></div>
+				<div class="context-description">
+					<h4>Client</h4>
+					<p>FHA</p>
+				</div>
 
-			<h4>Role</h4><div class="context-description"><p>I lead visual design for phase 1 and co-lead research & design for phase 2 (with oversight from a CD).</p></div>
-			
-			<h4>Responsibilities</h4> <div class="context-description"><p>Heuristic Evaluation, Stakeholder & User Interviews, Usability Testing, Affinity Mapping, Wireframing, Prototyping, UI Design, Style & Brand Development</p></div>
-			
-			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, Excel</p></div>
-			
-			<h4>Length</h4><div class="context-description"><p>9 months</p></div>
+				<div class="context-description">
+					<h4>Role</h4>
+					<p>UX Co-Lead</p>
+				</div>
+				
+				<div class="context-description">
+					<h4>Tools</h4>
+					<p>Sketch, InVision, Abstract, Miro</p>
+				</div>
+				
+				<div class="context-description">
+					<h4>Length</h4>
+					<p>9 months</p>
+				</div>
+			</div>
 		</div>
 	</div>
 
