--- a/fms-pos.html
+++ b/fms-pos.html
@@ -52,7 +52,6 @@
 				<div>
 					<h4>2019 • Deloitte Digital • Food & Nutrition</h4>
 					<h1>Food Management System</h1>
-					<div class="space"></div>
 					<p class="p-XL">I redesigned key features of the interface that government workers use to provide food to nearly 100,000 low-income individuals.<p>
 				</div>
 			</div>
@@ -61,32 +60,33 @@
 		<img src="pics/pos-small.png" class="big-pic">
 	</div>
 
-	<div class="panel context">
+	<div class="panel">
+		<div class="body right">
 		<div class="context-summary">
 			<h2>Project Overview</h2>
 			<p class="p-XL">	
-				The agency's legacy inventory management system was long overdue for an upgrade. It had a number of inefficiencies that forced users to change their business processes to match the system. For example, some organizations ordered their physical stores around the (un-sortable) catalog provided in the legacy system to make data entry easier.
+				The USDA runs the Food Distribution Program on Indian Reservations, a program that provides supplemental food to folks living on Indian Tribal Organizations (ITOs). The legacy inventory management system that their staff uses to adminster the program and distribute food had a number of inefficiencies that forced users to change their business processes to match the system.
 			</p>
 			<div class="space"></div>
 			<h3>Approach</h3>
-			<p>My team replaced the legacy system with a modern Salesforce-based webapp and and iPad app. Much of the Salesforce webapp could be builtin with "out of the box" components — the design team was brought in to advise the devs and tackle the custom UI work. I worked with my lead to design screens for the inventory management and point of sale processes.</p>
+			<p>My team replaced the legacy system with a modern Salesforce-based webapp and an iPad app. Much of the Salesforce webapp could be built with "out of the box" components — the design team was brought in to advise the devs and tackle the custom UI work. I worked with my lead to design screens for the inventory management and point of sale processes.</p>
 			<div class="space"></div>
 			<h3>Outcome</h3>
-			<p>Ultimately, the team was able to build an checkout experience that is efficient, flexible, and adaptable. The system launched in 2020 and now serves over 12,000 households across the US.</p>
+			<p>Ultimately, the team was able to build a checkout experience that is efficient, flexible, and adaptable. The system launched in 2020 and now serves over 12,000 households in 25 ITOs across the US.</p>
 
 		</div>
 
 		<div class="context-specifics">
-			<h4>Team</h4>
-			<div class="context-description"><p>Me, Senior Designer, Creative Director, Product Manager, 10+ Salesforce devs, Third-Party iOS Contractor, Engagement Manager</p></div>
-			<h4>Role</h4>
-			<div class="context-description"><p>I carried out research, UX, and UI design tasks with guidance from my lead</p></div>
-			<h4>Responsibilities</h4> 
-			<div class="context-description"><p>User Research, Journey Mapping, Wireframing, Prototyping, Visual Design, Information Architecture, User Flows</p></div>
-			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, PowerPoint</p></div>
-			<h4>Length</h4>
-			<div class="context-description"><p>9 months</p></div>
+
+			<div class="context-description"><h4>Client</h4><p>USDA</p></div>
+
+			<div class="context-description"><h4>Role</h4><p>Jr. UX Designer</p></div>
+			
+			<div class="context-description"><h4>Tools</h4><p>Sketch, InVision, Abstract</p></div>
+			
+			<div class="context-description"><h4>Length</h4><p>9 months</p></div>
 		</div>
+	</div>
 	</div>
 
 	<div class="full-width-mid-page">
