--- a/hud.html
+++ b/hud.html
@@ -49,7 +49,8 @@
 		<img src="pics/HUD_ds.png" class="big-pic">
 	</div>
 
-	<div class="panel context">
+	<div class="panel">
+		<div class="body right">
 		<div class="context-summary">
 			<h2>Project Overview</h2>
 			<p class="p-XL">
@@ -85,23 +86,31 @@
 		</div>
 
 		<div class="context-specifics">
-			<h4>Team</h4> 
-			<div class="context-description"><p>Me, Visual Designer, Creative Director, Contractor (Developer)</p></div>
 
-			<h4>Role</h4> 
-			<div class="context-description"><p>I audited the mockups a Visual Designer had created and built + organized over 200 scalable, custom symbols in Sketch. This was 100% UI work.</p></div>
-
-			<h4>Responsibilities</h4> 
-			<div class="context-description"><p>Component Audit, Design Systems, Symbols & Organization</p></div>
-
-			<h4>Tools</h4>
-			<div class="context-description"><p>Sketch, InVision, Abstract</p></div>
 			
-			<h4>Length</h4>
-			<div class="context-description"><p>2 months</p></div>
+			<div class="context-description">
+				<h4>Client</h4> 
+				<p>Federal Gov</p>
+			</div>
+			
+			<div class="context-description">
+				<h4>Role</h4> 
+				<p>UI Designer</p>
+			</div>
+			
+			<div class="context-description">
+				<h4>Tools</h4>
+				<p>Sketch, InVision, Abstract</p>
+			</div>
+			
+			<div class="context-description">
+				<h4>Length</h4>
+				<p>2 months</p>
+			</div>
 
 
 		</div>
+	</div>
 	</div>
 
 	<div class="full-width-mid-page">
