--- a/l&d.html
+++ b/l&d.html
@@ -50,7 +50,8 @@
 		</div>
       
 
-	  	<div class="panel context">
+	  	<div class="panel">
+	  		<div class="body right">
 			<div class="context-summary">
 			<h2>Context</h2>
 				<p class="p-XL">During my summer at Deloitte Digital as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.</p>
@@ -73,25 +74,18 @@
 	        		<p>View all the requester screens <a href="pics/l&d/requester.pdf">here</a> and all the approver screens <a href="pics/l&d/approver.pdf">here</a>!</p>
 	        	</div> 
 
-				<p>
-				 
-				</p>
-
 			</div>
 			
 			<div class="context-specifics">
 
-				<h4>Team</h4><div class="context-description"><p>Me, PM, Senior Manager</p></div>
+				<div class="context-description"><h4>Role</h4><p>UX Design Intern</p></div>
 
-				<h4>Role</h4><div class="context-description"><p>I led all design work with oversight from my PM and 2 other designers.</p></div>
+				<div class="context-description"><h4>Tools</h4><p>Adobe InDesign, Sketch, InVision</p></div>
 
-				<h4>Responsibilities</h4><div class="context-description"><p>Heuristic Evaluation, Interviewing, Usability Testing, Affinity Mapping, Product Visioning, Personas, User Stories, Business Process Modeling, Information Architecture, Wireframing, Prototyping, Presenting</p></div>
-
-				<h4>Tools</h4><div class="context-description"><p>Adobe InDesign, Sketch, InVision, PowerPoint, A lot of sticky notes</p></div>
-
-				<h4>Length</h4><div class="context-description"><p>2 Months</p></div>
+				<div class="context-description"><h4>Length</h4><p>2 Months</p></div>
 
 			</div>
+	  	</div>
 	  	</div>
 
 		<div class="full-width-mid-page">
